fix standalone article block reserving a `row-gap` of space for unpassed image from blog

--- a/scss/_patterns_article-block.scss
+++ b/scss/_patterns_article-block.scss
@@ -57,6 +57,8 @@
   So, we by default remove all margin and padding. Then, further style rules can query for presence of content and add appropriate margins and padding.
    */
   .p-article-block__item {
+    display: contents;
+
     &:not(:last-child) {
       // empty items pull their following contents up by canceling the row-gap.
       margin-bottom: -#{$article-block-row-gap};
@@ -67,6 +69,7 @@
     &:has(.p-article-block__description:not(:empty)),
     &:has(.article-author:not(:empty)),
     &:has(.article-time:not(:empty)) {
+      display: grid;
       font-size: #{map-get($settings-text-p, font-size)}rem;
       line-height: map-get($settings-text-p, line-height);
       // cancel out the row-gap cancellation if the item has contents.
